# pdnsd

./: .gitignore  CMakeLists.txt  config.h.cmake
src/: android.c  conff.h  dns.h  dns_query.c
